@@ -1,6 +1,7 @@
 Version 3.1.2 - xx xxx 2009
  
   * RestrictedIndicator allows special characters. Ticket #61.
+  * Add $basedir to build.xml. Ticket #63.
 
 Version 3.1.1 - 30 Sep 2009
 
